fix form not showing when  new book button clicked after styling form

--- a/style.css
+++ b/style.css
@@ -58,7 +58,6 @@ body {
 
 #bookForm {
     display: none;
-    display: flex;
     flex-direction: column;
     gap: 2.5px;
     padding: 10px;
